<resources>
    <string name="app_name">iot</string>
    <string name="welcome_user">Welcome, User</string>
    <string name="date">00/00/2024</string>
    <string name="time">00:00</string>
    <string name="day">Monday</string>
    <string name="soil_moisture_label">Soil Moisture</string>
    <string name="humid">HUMID</string>
    <string name="moisture_percentage_label">Moisture Percentage</string>
    <string name="temperature_label">Temperature</string>
    <string name="ph_label">pH</string>
    <string name="air_quality_label">Air Quality</string>
    <string name="water_level_label">Water Level</string>
    <string name="change_language">Change Language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>