<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/header"
            android:background="#A55AFB"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mypoppins"
            android:padding="10dp"
            android:text="@string/welcome_user"
            android:textColor="@color/white"
            android:textSize="25sp" />

        </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingBottom="90dp"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">


            <androidx.cardview.widget.CardView
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:cardCornerRadius="18dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="#8179DC">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        >

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/date"
                        android:textColor="@color/white"
                        android:textSize="20sp" />


                    <TextView
                        android:id="@+id/day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/mypoppins"
                        android:text="@string/day"
                        android:textColor="@color/white"
                        android:textFontWeight="600"
                        android:textSize="30sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mypoppins"
                        android:layout_gravity="end"
                        android:text="@string/time"
                        android:textColor="@color/white"
                        android:textFontWeight="1000"
                        android:textSize="60sp" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="18dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="#E49D33"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mypoppins"
                            android:text="@string/soil_moisture_label"
                            android:textColor="@color/white"
                            android:textSize="22sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:id="@+id/soil_moisture"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mypoppins"
                            android:text="0%"
                            android:textColor="@color/white"
                            android:textFontWeight="900"
                            android:textSize="50sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mypoppins"
                            android:text="@string/humid"
                            android:textColor="@color/white"
                            android:textSize="22sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    app:cardCornerRadius="18dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="#5584FB"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mypoppins"
                            android:text="@string/moisture_percentage_label"
                            android:textColor="@color/white"
                            android:textSize="22sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mypoppins"
                            android:text="0.00"
                            android:id="@+id/moisture_percentage"
                            android:textColor="@color/white"
                            android:textFontWeight="900"
                            android:textSize="50sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    app:cardCornerRadius="18dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="#FC5151"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mypoppins"
                            android:text="@string/temperature_label"
                            android:textColor="@color/white"
                            android:textSize="22sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mypoppins"
                            android:text="00.00° C"
                            android:id="@+id/temperature_c"
                            android:textColor="@color/white"
                            android:textFontWeight="900"
                            android:textSize="35sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mypoppins"
                            android:text="00.00° F"
                            android:id="@+id/temperature_f"
                            android:textColor="@color/white"
                            android:textFontWeight="900"
                            android:textSize="35sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    app:cardCornerRadius="18dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="#B76EFF"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mypoppins"
                            android:text="@string/ph_label"
                            android:textColor="@color/white"
                            android:textSize="30sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mypoppins"
                            android:text="00.00"
                            android:id="@+id/ph"
                            android:textColor="@color/white"
                            android:textFontWeight="900"
                            android:textSize="50sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:id="@+id/relativeLayout"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:cardCornerRadius="18dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#606061">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mypoppins"
                            android:text="@string/air_quality_label"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="000 ppm"
                            android:id="@+id/air_quality"
                            android:textColor="@color/white"
                            android:textSize="30sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mypoppins"
                            android:text="00"
                            android:id="@+id/water_level"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textFontWeight="600"
                            android:textSize="30sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mypoppins"
                            android:text="@string/water_level_label"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </LinearLayout>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/languageBtn"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cardCornerRadius="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:background="#3473D8"
                    >
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_margin="8dp"
                        android:layout_height="30dp"
                        android:src="@drawable/baseline_language_24"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:textSize="22sp"
                        android:textColor="@color/white"
                        android:text="@string/change_language"
                        android:layout_gravity="center"
                        android:fontFamily="@font/mypoppins"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/chatBot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:layout_constraintTop_toBottomOf="@id/languageBtn"
                android:text="ChatBot"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>